# sdl2-raytracer

./: .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  conanfile.txt
gtest/: CMakeLists.txt  test.cc
src/: CApp.h  CMakeLists.txt  main.cpp
